<resources>
    <string name="app_name">JUNavigation</string>
    <string name="title_Floor_1">Floor 1</string>
    <string name="title_Floor_2">Floor 2</string>
    <string name="title_Floor_3">Floor 3</string>
    <string name="title_Floor_4">Floor 4</string>

    <string name="search_title">Search</string>
    <string name="search_hint">Search for a room or teacher</string>

    <string name="Language">Language</string>

    /* *** Values for map checkboxes *** */
    <string name="checkbox_you_are_here">You are here</string>
    <string name="checkbox_rooms">Rooms</string>
    <string name="checkbox_vending_machines">Vending Machines</string>
    <string name="checkbox_stairs_elevators">Stairs &amp; elevators</string>
    <string name="checkbox_toilets">Toilets</string>
    <string name="checkbox_exits_entrances">Exits &amp; entrances</string>

    /* *** Other strings *** */
    <string name="splashscreen_loading">Loading maps, hold on…</string>
    <string name="name">Name:</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="office">Office</string>
    <string name="signature">Signature</string>
    <string name="find_office">Find Office</string>
    <string name="close_me">Close Me</string>
    <string name="navigation_to">Navigation to</string>
    <string name="building_a">This room is in building A (principal office)</string>
    <string name="building_b">This room is in building B, Jönköping Business School (JIBS)</string>
    <string name="building_c">This room is in building C, Library</string>
    <string name="buidling_d">This room is in building D, Students house</string>
    <string name="buidling_f">This room is in building F</string>
    <string name="building_g">This room is in building G, School of Health and Welfare</string>
    <string name="building_h">This room is in building H, School of Education and Communication</string>
    <string name="building_j">This room is in building J, Campus Arena</string>
    <string name="not_found">Not found</string>
    <string name="hint_admin_password">Admin Password</string>
    <string name="option_continue">Close application</string>
    <string name="bad_search">No search results for %1$s? Did you mean %2$s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>
