<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="650dp"
        android:layout_height="310dp"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardElevation="5dp"
        app:cardCornerRadius="10dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:id="@+id/Static"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp">

                <ImageView
                    android:id="@+id/teacher_Photo"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"

                    android:layout_margin="16dp"/>

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/teacherName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="16dp"
                    android:layout_toRightOf="@id/teacher_Photo"
                    android:text="@string/name"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/teacherPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/teacherName"
                    android:layout_marginTop="16dp"
                    android:layout_toRightOf="@id/teacher_Photo"
                    android:text="@string/phone"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/teacherEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/teacherPhone"
                    android:layout_marginTop="16dp"
                    android:layout_toRightOf="@id/teacher_Photo"
                    android:text="@string/email"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/teacherOffice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/teacherEmail"
                    android:layout_marginTop="16dp"
                    android:layout_toRightOf="@id/teacher_Photo"
                    android:text="@string/office"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/teacherSignature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/teacherOffice"
                    android:layout_marginTop="16dp"
                    android:layout_toRightOf="@id/teacher_Photo"
                    android:text="@string/signature"
                    android:textSize="25sp"
                    android:textStyle="bold" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/dynamic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/Static"

                >

                <TextView
                    android:id="@+id/teacher_Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="22dp"
                    android:text="Name: "
                    android:textSize="20sp"

                    />

                <TextView
                    android:id="@+id/teacher_Phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/teacher_Name"
                    android:layout_marginTop="23dp"
                    android:text="Phone: "
                    android:textSize="20sp"

                    />
                <TextView
                    android:id="@+id/teacher_Email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/teacher_Phone"
                    android:layout_marginTop="23dp"
                    android:text="Email: "
                    android:textSize="20sp"

                    />

                <TextView
                    android:id="@+id/teacher_Office"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/teacher_Email"
                    android:layout_marginTop="23dp"
                    android:text="Office: "
                    android:textSize="20sp"

                    />

                <TextView
                    android:id="@+id/teacher_Signature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/teacher_Office"
                    android:layout_marginTop="23dp"
                    android:text="Signature: "
                    android:textSize="20sp"

                    />

            </RelativeLayout>

            <Button
                android:id="@+id/button_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close_me"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:textColor="@color/cardview_light_background"
                android:backgroundTint="@color/main_palette_allert"
                />

            <Button
                android:id="@+id/button_get_navigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:text="@string/find_office"
                android:textColor="@color/cardview_light_background"
                android:backgroundTint="@color/main_palette_link"
                />


        </RelativeLayout>



    </androidx.cardview.widget.CardView>


</RelativeLayout>

